--- a/analysis-complete-case/exploratory-analysis-block-level-cigarette-use.Rmd
+++ b/analysis-complete-case/exploratory-analysis-block-level-cigarette-use.Rmd
@@ -85,8 +85,12 @@ fit <- geeglm(substance_is_cigarettes ~ Y, family = "binomial", data = dat_logre
 
 ```{r}
 dat_results <- summary(fit)[["coefficients"]]
+
 dat_results[["LB95"]] <- dat_results$Estimate - qnorm(0.975) * dat_results$Std.err
 dat_results[["UB95"]] <- dat_results$Estimate + qnorm(0.975) * dat_results$Std.err
+
+dat_results[["LB90"]] <- dat_results$Estimate - qnorm(0.95) * dat_results$Std.err
+dat_results[["UB90"]] <- dat_results$Estimate + qnorm(0.95) * dat_results$Std.err
 
 dat_results_logodds_scale <- dat_results
 dat_results_logodds_scale %>% round(., 3)
@@ -96,52 +100,21 @@ dat_results_logodds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.cs
 ```
 
 ```{r}
-dat_results_odds_scale <- data.frame(estimate = exp(dat_results$Estimate), LB95 = exp(dat_results[["LB95"]]), UB95 = exp(dat_results[["UB95"]]))
+dat_results_odds_scale <- data.frame(estimate = exp(dat_results$Estimate), 
+                                     # 95% CI
+                                     LB95 = exp(dat_results[["LB95"]]), 
+                                     UB95 = exp(dat_results[["UB95"]]),
+                                     # 90% CI
+                                     LB90 = exp(dat_results[["LB90"]]), 
+                                     UB90 = exp(dat_results[["UB90"]]))
+
+row.names(dat_results_odds_scale) <- row.names(dat_results_logodds_scale)
+
 dat_results_odds_scale %>% round(., 3)
 
 # Format output to 3 decimal places
 dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "block_level_odds_scale_concurrent.csv"), row.names = TRUE)
 ```
-
-# Estimate the prevalence
-
-```{r}
-dat_logreg <- dat_for_analysis %>% 
-  filter(eligibility == 1) %>% 
-  select(participant_id, decision_point, substance_is_cigarettes, Y) %>%
-  mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
-  filter(drop_row == 0)
-```
-
-```{r}
-fit <- geeglm(substance_is_cigarettes ~ Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
-```
-
-```{r}
-Lmat <- matrix(c(1,0,
-                 1,1), ncol = 2, byrow = TRUE)
-
-est_contrast <- Lmat %*% as.matrix(fit$coefficients)
-est_vcov_contrast <- Lmat %*% vcov(fit) %*% t(Lmat)
-est_stderr_contrast <- sqrt(diag(est_vcov_contrast))
-LB95 <- est_contrast - qnorm(0.975) * est_stderr_contrast
-UB95 <- est_contrast + qnorm(0.975) * est_stderr_contrast
-
-dat_result <- data.frame(engaged = c(0,1), est_contrast = exp(est_contrast), LB95 = exp(LB95), UB95 = exp(UB95))
-```
-
-```{r}
-print(dat_result)
-```
-
-```{r, fig.height = 5, fig.width = 7}
-plot(dat_result$engaged, dat_result$est_contrast, type = "b", yaxt = "n", xaxt = "n", ylim = c(0,1), xlab = "Whether engaged in self-regulatory strategies on block j", ylab = "Prevalance of cigarette use on block j")
-axis(1, at = c(0,1))
-axis(2, at = seq(0,1,0.2))
-lines(dat_result$engaged, dat_result$LB, type = "b", lty = 2)
-lines(dat_result$engaged, dat_result$UB, type = "b", lty = 2)
-```
-
 
 # Time-varying association between engagement in self-regulatory strategies and cigarette use on current person-block
 
@@ -187,14 +160,72 @@ model_tvem <- tvem(data=dat_tvem,
                    spline_order = 3,
                    penalty_function_order = 1,
                    penalize = TRUE)
+```
 
+```{r}
 plot(model_tvem)
+
+plot(model_tvem, exponentiate = TRUE)
+```
+
+```{r}
+# Create ggplot version of plot
+dat_fitted_tvem <- model_tvem$grid_fitted_coefficients$Y
+
+dat_fitted_tvem[["time_grid"]] <- model_tvem$time_grid
+
+dat_fitted_tvem[["UB95"]] <- model_tvem$grid_fitted_coefficients$Y$estimate + qnorm(0.975)*model_tvem$grid_fitted_coefficients$Y$standard_error
+dat_fitted_tvem[["LB95"]] <- model_tvem$grid_fitted_coefficients$Y$estimate - qnorm(0.975)*model_tvem$grid_fitted_coefficients$Y$standard_error
+
+dat_fitted_tvem[["UB90"]] <- model_tvem$grid_fitted_coefficients$Y$estimate + qnorm(0.95)*model_tvem$grid_fitted_coefficients$Y$standard_error
+dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$Y$estimate - qnorm(0.95)*model_tvem$grid_fitted_coefficients$Y$standard_error
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[CU][paste(",")][1]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_logodds_scale_concurrent_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[CU][paste(",")][1]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_logodds_scale_concurrent_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+```{r}
+# Create ggplot version of plot
+dat_fitted_tvem_exp_scale <- dat_fitted_tvem
+
+dat_fitted_tvem_exp_scale[["estimate"]] <- exp(dat_fitted_tvem[["estimate"]])
+
+dat_fitted_tvem_exp_scale[["UB95"]] <- exp(dat_fitted_tvem[["UB95"]])
+dat_fitted_tvem_exp_scale[["LB95"]] <- exp(dat_fitted_tvem[["LB95"]])
+
+dat_fitted_tvem_exp_scale[["UB90"]] <- exp(dat_fitted_tvem[["UB90"]])
+dat_fitted_tvem_exp_scale[["LB90"]] <- exp(dat_fitted_tvem[["LB90"]])
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][1]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 1.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_odds_scale_concurrent_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][1]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 1.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_odds_scale_concurrent_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 # Marginal association between engagement in self-regulatory strategies and cigarette use on next person-block
 
 $$
-\mathrm{logit} Pr \left( S_{i,j + 1} = 1 \Big| \left\{I_{i, j} = 1\right\} \cap \left\{I_{i, j+1} = 1\right\} \right) = \beta_0 + \beta_1 \text{WHETHER ENGAGED}_{i,j} + \beta_2 S_{i, j}
+\mathrm{logit} Pr \left( S_{i,j + 1} = 1 \Big| \left\{I_{i, j} = 1\right\} \cap \left\{I_{i, j+1} = 1\right\} \right) = \beta_0 + \beta_1 S_{i, j} + \beta_2 \text{WHETHER ENGAGED}_{i,j}
 $$
 
 ```{r}
@@ -206,13 +237,17 @@ dat_logreg <- dat_for_analysis %>%
 ```
 
 ```{r}
-fit <- geeglm(substance_is_cigarettes_lead1 ~ Y + substance_is_cigarettes, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
+fit <- geeglm(substance_is_cigarettes_lead1 ~ substance_is_cigarettes + Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
 ```
 
 ```{r}
 dat_results <- summary(fit)[["coefficients"]]
+
 dat_results[["LB95"]] <- dat_results$Estimate - qnorm(0.975) * dat_results$Std.err
 dat_results[["UB95"]] <- dat_results$Estimate + qnorm(0.975) * dat_results$Std.err
+
+dat_results[["LB90"]] <- dat_results$Estimate - qnorm(0.95) * dat_results$Std.err
+dat_results[["UB90"]] <- dat_results$Estimate + qnorm(0.95) * dat_results$Std.err
 
 dat_results_logodds_scale <- dat_results
 dat_results_logodds_scale %>% round(., 3)
@@ -222,7 +257,16 @@ dat_results_logodds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.cs
 ```
 
 ```{r}
-dat_results_odds_scale <- data.frame(estimate = exp(dat_results$Estimate), LB95 = exp(dat_results[["LB95"]]), UB95 = exp(dat_results[["UB95"]]))
+dat_results_odds_scale <- data.frame(estimate = exp(dat_results$Estimate), 
+                                     # 95% CI
+                                     LB95 = exp(dat_results[["LB95"]]), 
+                                     UB95 = exp(dat_results[["UB95"]]),
+                                     # 90% CI
+                                     LB90 = exp(dat_results[["LB90"]]), 
+                                     UB90 = exp(dat_results[["UB90"]]))
+
+row.names(dat_results_odds_scale) <- row.names(dat_results_logodds_scale)
+
 dat_results_odds_scale %>% round(., 3)
 
 # Format output to 3 decimal places
@@ -232,7 +276,7 @@ dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(.
 # Time-varying association between engagement in self-regulatory strategies and cigarette use on current person-block
 
 $$
-\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,j+1} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right) + \text{ANY CIGARETTE USE}_{i} \left(t_{i,j} \right)
+\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,j+1} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{ANY CIGARETTE USE}_{i} \left(t_{i,j} \right) + \beta_2 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right)
 $$
 ```{r}
 dat_tvem <- dat_logreg
@@ -243,7 +287,7 @@ list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=substance_is_cigarettes_lead1 ~ Y + substance_is_cigarettes,
+                     formula=substance_is_cigarettes_lead1 ~ substance_is_cigarettes + Y,
                      id=participant_id,
                      time=decision_point,
                      invar_effects=NULL,
@@ -263,7 +307,7 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=substance_is_cigarettes_lead1 ~ Y + substance_is_cigarettes,
+                   formula=substance_is_cigarettes_lead1 ~ substance_is_cigarettes + Y,
                    id=participant_id,
                    time=decision_point,
                    invar_effects=NULL,
@@ -272,6 +316,68 @@ model_tvem <- tvem(data=dat_tvem,
                    spline_order = 3,
                    penalty_function_order = 1,
                    penalize = TRUE)
-
-plot(model_tvem)
 ```
+
+```{r}
+plot(model_tvem)
+
+plot(model_tvem, exponentiate = TRUE)
+```
+
+```{r}
+# Create ggplot version of plot
+dat_fitted_tvem <- model_tvem$grid_fitted_coefficients$Y
+
+dat_fitted_tvem[["time_grid"]] <- model_tvem$time_grid
+
+dat_fitted_tvem[["UB95"]] <- model_tvem$grid_fitted_coefficients$Y$estimate + qnorm(0.975)*model_tvem$grid_fitted_coefficients$Y$standard_error
+dat_fitted_tvem[["LB95"]] <- model_tvem$grid_fitted_coefficients$Y$estimate - qnorm(0.975)*model_tvem$grid_fitted_coefficients$Y$standard_error
+
+dat_fitted_tvem[["UB90"]] <- model_tvem$grid_fitted_coefficients$Y$estimate + qnorm(0.95)*model_tvem$grid_fitted_coefficients$Y$standard_error
+dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$Y$estimate - qnorm(0.95)*model_tvem$grid_fitted_coefficients$Y$standard_error
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[CU][paste(",")][2]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_logodds_scale_lagged_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[CU][paste(",")][2]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_logodds_scale_lagged_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+```{r}
+# Create ggplot version of plot
+dat_fitted_tvem_exp_scale <- dat_fitted_tvem
+
+dat_fitted_tvem_exp_scale[["estimate"]] <- exp(dat_fitted_tvem[["estimate"]])
+
+dat_fitted_tvem_exp_scale[["UB95"]] <- exp(dat_fitted_tvem[["UB95"]])
+dat_fitted_tvem_exp_scale[["LB95"]] <- exp(dat_fitted_tvem[["LB95"]])
+
+dat_fitted_tvem_exp_scale[["UB90"]] <- exp(dat_fitted_tvem[["UB90"]])
+dat_fitted_tvem_exp_scale[["LB90"]] <- exp(dat_fitted_tvem[["LB90"]])
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][2]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 1.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_odds_scale_lagged_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+```{r}
+# Create ggplot version of plot
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][2]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 1.5))
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_block_level_odds_scale_lagged_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+
+
+
